@@ -2,6 +2,7 @@ package com.core.backend.service;
 
 import com.core.backend.dto.comment.CommentCreateUpdateDto;
 import com.core.backend.dto.comment.CommentDto;
+import com.core.backend.dto.comment.CommentWithPaginationDto;
 import com.core.backend.dto.filter.PostFilters;
 import com.core.backend.dto.post.PostCreateUpdateDto;
 import com.core.backend.dto.post.PostDto;
@@ -9,18 +10,21 @@ import com.core.backend.dto.post.PostWithPaginationDto;
 import com.core.backend.dto.mapper.CommentMapper;
 import com.core.backend.dto.mapper.PostMapper;
 import com.core.backend.exception.*;
+import com.core.backend.id.CommentLikeOrDislikeId;
 import com.core.backend.id.PostLikeOrDislikeId;
 import com.core.backend.model.*;
 import com.core.backend.repository.*;
 import com.core.backend.sorting.PostSorting;
 import com.core.backend.utilis.Utilis;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.*;
@@ -28,6 +32,7 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
+@Transactional
 @Service
 public class PostServiceImpl implements PostService {
 
@@ -51,6 +56,9 @@ public class PostServiceImpl implements PostService {
 
     @Autowired
     private PostLikeOrDislikeRepository postLikeOrDislikeRepository;
+
+    @Autowired
+    private CommentLikeOrDislikeRepository commentLikeOrDislikeRepository;
 
     @Autowired
     private Utilis utilis;
@@ -100,13 +108,12 @@ public class PostServiceImpl implements PostService {
             startDate = cal.getTime();
         }
 
-        posts = postRepository.findPostsFiltered(postFilters.getCategoryGroupId()
-                , postFilters.getCategoryId(), postFilters.getCreatorId(), startDate, endDate, sort);
-
+        posts = postRepository.findPostsFiltered(postFilters.getCategoryGroupId(), postFilters.getCategoryId(),
+                postFilters.getCreatorId(), startDate, endDate, sort);
 
         posts = posts.stream().filter(p -> {
             boolean containsAllTags = true;
-            for(String tagName : tagNames) {
+            for (String tagName : tagNames) {
                 if (!p.getPostTags().contains(new PostTag(tagName))) {
                     containsAllTags = false;
                     break;
@@ -154,6 +161,20 @@ public class PostServiceImpl implements PostService {
     }
 
     @Override
+    public CommentDto getCommentById(String commentId) throws WrongIdException, NoIdException, NoCommentException {
+        long longId;
+        longId = utilis.convertId(commentId);
+        Optional<Comment> comment = commentRepository.findById(longId);
+        if (comment.isEmpty())
+            throw new NoCommentException("Komentarz nie istnieje");
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        User user = userRepository.findByEmail(authentication.getName());
+        CommentLikeOrDislike commentLikeOrDislike = getCommentLikeOrDislike(comment.get(), user);
+        Boolean isLiked = commentLikeOrDislike == null ? null : commentLikeOrDislike.isLikes();
+        return CommentMapper.toCommentDto(comment.get(), isLiked);
+    }
+
+    @Override
     public List<CommentDto> getComments(String postId) throws WrongIdException, NoIdException, NoPostException {
         long longId;
         longId = utilis.convertId(postId);
@@ -163,12 +184,12 @@ public class PostServiceImpl implements PostService {
         Post post = postOptional.get();
         List<Comment> comments = commentRepository.findAllCommentsByPostId(post.getPostId());
         return comments.stream()
-                .map(CommentMapper::toCommentDto)
+                .map(c -> CommentMapper.toCommentDto(c, null))
                 .collect(Collectors.toList());
     }
 
     @Override
-    public List<CommentDto> getCommentsPagination(String postId, Integer page, Sort.Direction sort)
+    public CommentWithPaginationDto getCommentsPagination(String postId, Integer page, Sort.Direction sort)
             throws WrongIdException, NoIdException, NoPostException {
 
         long longId;
@@ -179,41 +200,50 @@ public class PostServiceImpl implements PostService {
         Post post = postOptional.get();
         page = page == null ? 0 : page;
         Pageable pageableRequest = PageRequest.of(page, PAGE_SIZE, sort, "commentId");
-        List<Comment> comments = commentRepository.findAllCommentsByPostId(post.getPostId(), pageableRequest);
+        Page<Comment> comments = commentRepository.findAllCommentsByPostId(post.getPostId(), pageableRequest);
 
-        return comments.stream()
-                .map(CommentMapper::toCommentDto)
-                .collect(Collectors.toList());
+        List<CommentDto> collectedComments = comments.stream()
+                .map(c -> CommentMapper.toCommentDto(c, null))
+                .toList();
+        return new CommentWithPaginationDto(collectedComments, comments.getTotalElements());
     }
 
     @Override
-    public PostCreateUpdateDto addPost(PostCreateUpdateDto postDto, MultipartFile photo)
+    public PostDto addPost(PostCreateUpdateDto postDto)
             throws NoPostCategoryException {
         Post post;
-        boolean isPhotoEmpty = photo == null || photo.isEmpty();
+        boolean isPhotoEmpty = postDto.getPhoto() == null || postDto.getPhoto().isEmpty();
+        boolean areTagNamesEmpty = postDto.getTagNames() == null || postDto.getTagNames().size() == 0;
         String photoPath = "";
+        List<PostTag> postTagList;
+        Set<PostTag> postTags;
 
-        postDto.setTagNames(postDto.getTagNames().stream()
-                .map(p -> p.toLowerCase(Locale.ROOT))
-                .collect(Collectors.toSet()));
         User user = userRepository.findByEmail(SecurityContextHolder.getContext().getAuthentication().getName());
-        List<PostTag> postTagList = StreamSupport
-                .stream(postTagRepository.findAllById(postDto.getTagNames()).spliterator(), false)
-                .toList();
-        Set<PostTag> postTags = new HashSet<>(postTagList);
-
-        for (String tag : postDto.getTagNames()) {
-            if (!postTags.contains(new PostTag(tag))) {
-                PostTag p = new PostTag(tag);
-                postTagRepository.save(p);
-                postTags.add(p);
-            }
-        }
         PostCategory postCategory = postCategoryRepository.findByDisplayName(postDto.getCategoryName());
+
         if (postCategory == null)
             throw new NoPostCategoryException("Podana kategoria postu nie istnieje");
         postCategory.setTotalPosts(postCategory.getTotalPosts() + 1);
         postCategory.getPostCategoryGroup().setTotalPosts(postCategory.getPostCategoryGroup().getTotalPosts() + 1);
+
+        if (!areTagNamesEmpty) {
+            postDto.setTagNames(postDto.getTagNames().stream()
+                    .map(p -> p.toLowerCase(Locale.ROOT))
+                    .collect(Collectors.toSet()));
+            postTagList = StreamSupport
+                    .stream(postTagRepository.findAllById(postDto.getTagNames()).spliterator(), false)
+                    .toList();
+            postTags = new HashSet<>(postTagList);
+
+            for (String tag : postDto.getTagNames()) {
+                PostTag p = new PostTag(tag);
+                if (!postTags.contains(p)) {
+                    postTagRepository.save(p);
+                    postTags.add(p);
+                }
+            }
+        } else postTags = new HashSet<>();
+
 
         post = PostMapper.toPost(postDto, user, postCategory, postTags);
         for (PostTag p : postTags) {
@@ -224,14 +254,14 @@ public class PostServiceImpl implements PostService {
         if (!isPhotoEmpty) {
             photoPath = String.format("post_%d", post.getPostId());
             post.setImageUrl(photoPath);
-            postRepository.save(post);
+            post = postRepository.save(post);
         }
 
         if (isPhotoEmpty)
-            return postDto;
+            return PostMapper.toPostDto(post);
 
-        fileService.uploadFile(photo, photoPath);
-        return postDto;
+        fileService.uploadFile(postDto.getPhoto(), photoPath);
+        return PostMapper.toPostDto(post);
     }
 
     @Override
@@ -336,7 +366,7 @@ public class PostServiceImpl implements PostService {
     }
 
     @Override
-    public CommentCreateUpdateDto addComment(String postId, CommentCreateUpdateDto commentCreateUpdateDto)
+    public CommentDto addComment(String postId, CommentCreateUpdateDto commentCreateUpdateDto)
             throws NoPostException, WrongIdException, NoIdException {
         long longId;
         longId = utilis.convertId(postId);
@@ -344,8 +374,9 @@ public class PostServiceImpl implements PostService {
         Optional<Post> post = postRepository.findById(longId);
         if (post.isEmpty())
             throw new NoPostException("Post nie istnieje");
-        commentRepository.save(CommentMapper.toComment(commentCreateUpdateDto, creator, post.get()));
-        return commentCreateUpdateDto;
+        Comment newComment = CommentMapper.toComment(commentCreateUpdateDto, creator, post.get());
+        commentRepository.save(newComment);
+        return CommentMapper.toCommentDto(newComment, null);
     }
 
     @Override
@@ -379,8 +410,10 @@ public class PostServiceImpl implements PostService {
                 comment.get().getCreator().getEmail()))
                 && authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals("ROLE_USER")))
             throw new NoAccessException("Możesz usunąć tylko swój komentarz");
-        else
+        else{
+            commentLikeOrDislikeRepository.deleteAllByCommentId(longId);
             commentRepository.deleteById(longId);
+        }
     }
 
     @Override
@@ -401,6 +434,15 @@ public class PostServiceImpl implements PostService {
         PostLikeOrDislikeId postLikeOrDislikeId = new PostLikeOrDislikeId(user, post);
         Optional<PostLikeOrDislike> postLikeOrDislike = postLikeOrDislikeRepository.findById(postLikeOrDislikeId);
         return postLikeOrDislike.isEmpty() ? null : postLikeOrDislike.get();
+    }
+
+    @Override
+    public CommentLikeOrDislike getCommentLikeOrDislike(Comment comment, User user) {
+        if (user == null)
+            return null;
+        CommentLikeOrDislikeId commentLikeOrDislikeId = new CommentLikeOrDislikeId(comment, user);
+        Optional<CommentLikeOrDislike> commentLikeOrDislike = commentLikeOrDislikeRepository.findById(commentLikeOrDislikeId);
+        return commentLikeOrDislike.isEmpty() ? null : commentLikeOrDislike.get();
     }
 
 }
